fixed flex spacing of hero section

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,11 @@
     font-family: "Roboto", Helvetica, sans-serif;
 }
 
-.hero {
+body {
     background-color: #1F2937;
+    padding: 0 80px;
+}
+.hero {
     display:flex;
     flex-direction: column;
 }
@@ -19,6 +22,7 @@ header {
     justify-content: space-between;
     align-items: flex-end;
     margin-bottom: 1em;
+}
 
 ul {
     list-style-type: none;
@@ -37,8 +41,22 @@ a {
     font-weight: 800;
 }
 
-main {
+.main {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    margin-bottom: 32px;
 }
 
+.hero-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+}
+
+.hero-right {
+    display: flex;
+    justify-items: center;
+    align-self: center;
+}
